nieuw project toegevoegd

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
               />
           </svg>
         </div>
+         
 
         <!-- projects -->
         <section id="projects" class="page-section dark-section">
@@ -103,20 +104,22 @@
                     <!-- project 1 -->
                     <div class="project-item">
                         <div class="project-item-image">
-                            <img src="images/pokemonbattlesimulator.png" alt="Project 1 Screenshot">
+                            <img src="images/sushihaven.png" alt="Project 1 Screenshot">
                         </div>
                         <div class="project-item-content">
-                            <h3>Meow</h3>
+                            <h3>Imaginary website design</h3>
                             </a>
-                            <p class="project-description">Hier komt een project</p>
+                            <p class="project-description">SushiHaven is a simple imaginary sushi restaurant website built with HTML, CSS, and some JavaScript, featuring a clean landing page with menu, about, and contact sections.</p>
                             <div class="project-tags">
                                 <span class="tag">HTML</span>
+                                <span class="tag">CSS</span>
                                 <span class="tag">Javascript</span>
-                                <span class="tag">API</span>
                             </div>
                             <div class="project-links">
+                                <!--
                                 <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> View Live</a>
-                                <a href="" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                                -->
+                                <a href="https://github.com/JoaSwart/sushihaven.git" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                             </div>
                         </div>
                     </div>
