--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
-            (function(){
-             emailjs.init({
-             publicKey: "YmIrTxQYvnUoaZvB5",
-            });
+        (function(){
+            emailjs.init("YmIrTxQYvnUoaZvB5");
         })();
     </script>
 </head>
@@ -313,7 +309,7 @@
             <div class="container">
                 <h2 class="contact-title section-title-custom">Contact Me</h2>
                 <p class="text-center lead-sm">I'm currently looking for internship opportunities. Let's connect!</p>
-                <form onsubmit="sendEmail(); reset(); return false;" id="contact-form">
+                <form id="contact-form">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
@@ -326,7 +322,7 @@
                         <label for="message">Message</label>
                         <textarea id="message" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" onclick="sendMail()" class="btn btn-primary">Send Message</button>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
             </div>
         </section>
